loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:3: error: not found: value estSurSortie
while(!estSurSortie()){
       ^