loopdowhile.Poucet2.scala.code
var nbBagel:Int=0

while(!estSurSortie()){
	do{
  	avance()
    if (estSurBiscuit()){
      nbBagel = nbBagel+1
    }
	}while(!crossing())
  if (nbBagel<3){
    droite()
  }
  else{
    gauche()
  }
  nbBagel=0
}
avance()